# viva

./: .gitignore  COMMERCIAL-LICENSE.md  LICENSE  LICENSE_HEADER.txt  NOTICE  README.md  pyproject.toml
documentation/: examples.md  grammar-diagram.mmd  grammar.md  lark-grammar-diagram.mmd  roadmap.md
documentation/pptx/: create_viva_presentation.js  viva_examples_presentation.pptx
examples/: example_seminal.viva  family_education.viva  full_syntax.viva  retirement.viva  small_business.viva
scripts/: generate_examples_md.py
src/viva/: __init__.py  interpreter.py  life.py  nodes.py  parser.py  playground.py
src/viva/grammars/: viva.lark
src/viva/parsers/: __init__.py  base.py  lark_parser.py
tests/: test_basic.py  test_examples.py
